// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charges renders Diamond correctly 1`] = `
<React.Fragment>
  <G
    id="charge-diamond-1"
  >
    <Polygon
      fill="#c00"
      points="150,200 300,100 450,200 300,300"
    />
  </G>
</React.Fragment>
`;

exports[`Charges renders Flower correctly 1`] = `
<React.Fragment>
  <G
    id="charge-flower-5"
  >
    <G
      transform="rotate(90 300 200)"
    >
      <Path
        d="M 300,300 Q 341.1,256.6 323.5,232.4 Q 341.1,256.6 395.1,230.9 Q 366.6,178.4 338,187.6 Q 366.6,178.4 358.8,119.1 Q 300,130 300,160 Q 300,130 241.2,119.1 Q 233.4,178.4 262,187.6 Q 233.4,178.4 204.9,230.9 Q 258.9,256.6 276.5,232.4 Q 258.9,256.6 300,300"
        fill="#0c0"
      />
    </G>
  </G>
</React.Fragment>
`;

exports[`Charges renders Flower correctly 2`] = `
<React.Fragment>
  <G
    id="charge-flower-8"
  >
    <G
      transform="rotate(0 300 200)"
    >
      <Path
        d="M 300,300 Q 330.6,273.9 323,255.4 Q 330.6,273.9 370.7,270.7 Q 373.9,230.6 355.4,223 Q 373.9,230.6 400,200 Q 373.9,169.4 355.4,177 Q 373.9,169.4 370.7,129.3 Q 330.6,126.1 323,144.6 Q 330.6,126.1 300,100 Q 269.4,126.1 277,144.6 Q 269.4,126.1 229.3,129.3 Q 226.1,169.4 244.6,177 Q 226.1,169.4 200,200 Q 226.1,230.6 244.6,223 Q 226.1,230.6 229.3,270.7 Q 269.4,273.9 277,255.4 Q 269.4,273.9 300,300"
        fill="#0c0"
      />
    </G>
  </G>
</React.Fragment>
`;

exports[`Charges renders Flower correctly 3`] = `
<React.Fragment>
  <G
    id="charge-flower-11"
  >
    <G
      transform="rotate(0 300 200)"
    >
      <Path
        d="M 300,300 Q 322.5,276.8 316.9,257.6 Q 322.5,276.8 354.1,284.1 Q 360.5,252.4 345.3,239.3 Q 360.5,252.4 391,241.5 Q 379.2,211.4 359.4,208.5 Q 379.2,211.4 399,185.8 Q 372.8,166.8 354.6,175.1 Q 372.8,166.8 375.6,134.5 Q 343.3,132.7 332.4,149.5 Q 343.3,132.7 328.2,104.1 Q 300,120 300,140 Q 300,120 271.8,104.1 Q 256.7,132.7 267.6,149.5 Q 256.7,132.7 224.4,134.5 Q 227.2,166.8 245.4,175.1 Q 227.2,166.8 201,185.8 Q 220.8,211.4 240.6,208.5 Q 220.8,211.4 209,241.5 Q 239.5,252.4 254.7,239.3 Q 239.5,252.4 245.9,284.1 Q 277.5,276.8 283.1,257.6 Q 277.5,276.8 300,300"
        fill="#0c0"
      />
    </G>
  </G>
</React.Fragment>
`;

exports[`Charges renders Flower correctly 4`] = `
<React.Fragment>
  <G
    id="charge-shield"
  >
    <Path
      d="M 234 116.66666666666667 L 234 193.33333333333331 Q 234,260 300.5,300 Q 367,260 367,193.33333333333331 L 367 116.66666666666667 Q 300.5,100 234,116.66666666666667"
      fill="#0c0"
    />
  </G>
</React.Fragment>
`;

exports[`Charges renders Pall correctly 1`] = `
<React.Fragment>
  <G
    id="charge-pall-1"
  >
    <Svg
      height={400}
      preserveAspectRatio="xMidYMid meet"
      width={600}
    >
      <Rect
        fill="#0c0"
        height={100}
        width={300}
        x={300}
        y={150}
      />
      <Rect
        fill="#0c0"
        height={100}
        transform="rotate(213.69006752597977 300 200)"
        width={360.5551275463989}
        x={300}
        y={150}
      />
      <Rect
        fill="#0c0"
        height={100}
        transform="rotate(146.30993247402023 300 200)"
        width={360.5551275463989}
        x={300}
        y={150}
      />
    </Svg>
  </G>
</React.Fragment>
`;

exports[`Charges renders Star correctly 1`] = `
<React.Fragment>
  <G
    id="charge-star-5"
  >
    <G
      transform="rotate(90 300 200)"
    >
      <Polygon
        fill="#0c0"
        points="300,300 323.5,232.4 395.1,230.9 338,187.6 358.8,119.1 300,160 241.2,119.1 262,187.6 204.9,230.9 276.5,232.4"
      />
    </G>
  </G>
</React.Fragment>
`;

exports[`Charges renders Star correctly 2`] = `
<React.Fragment>
  <G
    id="charge-star-8"
  >
    <G
      transform="rotate(0 300 200)"
    >
      <Polygon
        fill="#0c0"
        points="300,300 323,255.4 370.7,270.7 355.4,223 400,200 355.4,177 370.7,129.3 323,144.6 300,100 277,144.6 229.3,129.3 244.6,177 200,200 244.6,223 229.3,270.7 277,255.4"
      />
    </G>
  </G>
</React.Fragment>
`;

exports[`Charges renders Star correctly 3`] = `
<React.Fragment>
  <G
    id="charge-star-11"
  >
    <G
      transform="rotate(0 300 200)"
    >
      <Polygon
        fill="#0c0"
        points="300,300 316.9,257.6 354.1,284.1 345.3,239.3 391,241.5 359.4,208.5 399,185.8 354.6,175.1 375.6,134.5 332.4,149.5 328.2,104.1 300,140 271.8,104.1 267.6,149.5 224.4,134.5 245.4,175.1 201,185.8 240.6,208.5 209,241.5 254.7,239.3 245.9,284.1 283.1,257.6"
      />
    </G>
  </G>
</React.Fragment>
`;

exports[`Charges renders Stripes correctly 1`] = `
<React.Fragment>
  <G
    id="charge-stripes-serrated"
  >
    <G
      transform="translate(0 -100)"
    >
      <Svg
        height={600}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 400 400"
        width={600}
      >
        <Polygon
          fill="#00c"
          points="0,150 100,125 200,150 300,175 400,150 400,250 300,275 200,250 100,225 0,250"
        />
      </Svg>
    </G>
  </G>
</React.Fragment>
`;

exports[`Charges renders Stripes correctly 2`] = `
<React.Fragment>
  <G
    id="charge-stripes-wavy"
  >
    <G
      transform="translate(0 -100)"
    >
      <Svg
        height={600}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 400 400"
        width={600}
      >
        <Path
          d="M 0 150 A 200 200 0 0 1 200 150 A 200 200 0 0 0 400 150 L 400 250 A 200 200 0 0 1 200 250 A 200 200 0 0 0 0 250 Z"
          fill="#c00"
        />
      </Svg>
    </G>
  </G>
</React.Fragment>
`;
